--- a/html.html
+++ b/html.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Portfólio de Matheus Carlos, desenvolvedor front-end e backend.">
     <title>Portfólio Pessoal</title>
     <!-- Conectando o arquivo CSS externo -->
-   <link rel="stylesheet" href="css.css">
+   <link rel="stylesheet" href="css.css"> <!-- A pasta "css.css" está no mesmo diretório que o HTML -->
 
     <!-- Link para o Google Fonts (fonte Merriweather) -->
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
         <div class="container">
             <h1>Meu Portfólio</h1>
             <!-- Imagem no canto superior direito -->
-            <img src="5475c46a3326cc0f9af43b0a92a9bd6d.jpg" alt="Foto de perfil de Matheus Carlos" class="foto-perfil">
+            <img src="5475c46a3326cc0f9af43b0a92a9bd6d.jpg" alt="Foto de perfil de Matheus Carlos" class="foto-perfil"> <!-- Caminho da imagem -->
             <nav>
                 <ul>
                     <li><a href="#sobre">Sobre</a></li>
@@ -30,7 +30,7 @@
     <section id="sobre">
         <div class="container">
             <h2>Sobre Mim</h2>
-            <p>Prazer, sou Matheus Carlos, um desenvolvedor dedicado. Atualmente, estou cursando o Técnico em Desenvolvimento de Sistemas, o que tem me proporcionado uma base sólida e aprofundada nas mais diversas áreas da área de TI. Com experiência em desenvolvimento front-end, design e engenharia de sistemas, estou em constante busca de aprimoramento, aprendendo e evoluindo a cada oportunidade, com o objetivo de criar soluções digitais que promovam inovação e impacto positivo.</p>
+            <p>Prazer, sou Matheus Carlos, um desenvolvedor dedicado...</p>
         </div>
     </section>
 
