--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Portfólio de Matheus Carlos, desenvolvedor front-end e backend.">
     <title>Portfólio Pessoal</title>
     <!-- Conectando o arquivo CSS externo -->
-   <link rel="stylesheet" href="css.css"> <!-- A pasta "css.css" está no mesmo diretório que o HTML -->
+   <link rel="stylesheet" href=" styles.css"> <!-- A pasta "css.css" está no mesmo diretório que o HTML -->
 
     <!-- Link para o Google Fonts (fonte Merriweather) -->
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
