--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfólio de Matheus Carlos, desenvolvedor front-end e backend.">
     <title>Portfólio Pessoal</title>
-    <!-- Conectando o arquivo CSS externo -->
-   <link rel="stylesheet" href=" styles.css"> <!-- A pasta "css.css" está no mesmo diretório que o HTML -->
+   
+   <link rel="stylesheet" href=" styles.css"> 
 
-    <!-- Link para o Google Fonts (fonte Merriweather) -->
+   
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container">
             <h1>Meu Portfólio</h1>
-            <!-- Imagem no canto superior direito -->
+           
             <img src="5475c46a3326cc0f9af43b0a92a9bd6d.jpg" alt="Foto de perfil de Matheus Carlos" class="foto-perfil"> <!-- Caminho da imagem -->
             <nav>
                 <ul>
